// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the required icon for fields with hideRequired, but have a state of invalid 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
  >
    <div
      className="legend"
    >
      <span
        className="error-icon"
      />
      <span
        className="required"
      >
        *
      </span>
      Hidden Required CheckboxField
    </div>
  </legend>
</fieldset>
`;

exports[`should hide the legend when requested 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group legend-group-hidden"
  >
    <div
      class="application-legend"
      className="legend"
    >
      Hidden Legend legend
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should hide the required indicator when requested 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
  >
    <div
      className="legend"
    >
      Hidden Required CheckboxField
      <span
        className="required-hidden"
      >
        *
      </span>
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render a default checkbox field 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
  >
    <div
      className="legend"
    >
      Default CheckboxField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render a help message 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
  >
    <div
      className="legend"
    >
      Help CheckboxField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
  <div
    className="help-text"
  >
    This will help up determine how many chairs to request
  </div>
</fieldset>
`;

exports[`should render an invalid checkbox field 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
  >
    <div
      className="legend"
    >
      <span
        className="error-icon"
      />
      Invalid CheckboxField
    </div>
  </legend>
  <div
    className="error-text"
  >
    Test Error
  </div>
</fieldset>
`;

exports[`should render an optional part on the label 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
  >
    <div
      className="legend"
    >
      Optional CheckboxField
      <span
        className="optional"
      >
        Terra.form.field.optional
      </span>
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render required checkbox field 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
  >
    <div
      className="legend"
    >
      <span
        className="required"
      >
        *
      </span>
      Required CheckboxField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render the legend with custom attributes properly 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
  >
    <div
      class="application-legend"
      className="legend"
    >
      Custom Legend CheckboxField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;
